tests/parser/fail/v28_fail_unsigned_shift_assign.ep
# COMPILE_FAIL: Unexpected token
fun main(): void {
    let x = u64(8)
    x >>>= 1
}
